tests/type_errors/maximum_func_variant.nos
# expect_error: does not implement Ord
type Color = Red | Green | Blue
main() = maximum([Red, Green, Blue])
